--- a/style.css
+++ b/style.css
@@ -1,68 +1,104 @@
+
 * {
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
+}
+
+body {
+  background-color: hsl(30, 38%, 92%);
+  min-height: 100vh;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+}
+
+
+#cart-txt {
+  color: hsl(0, 0%, 100%);
+  padding: 0.5rem;
+}
+
+
+
+.name {
+  font-family: "Fraunces", serif;
+  font-size: 2.2rem;
+  padding: 2rem 0;
+}
+
+button:hover {
+  background-color: hsl(172, 25%, 22%);
+}
+
+#icon-cart {
+  height: 1rem;
+  width: 1rem;
+}
+
+.description {
+  font-size: 0.95rem;
+  font-family: "Montserrat", sans-serif;
+  color: hsl(228, 12%, 48%);
+  line-height: 1.5rem;
+}
+
+
+
+
+.price-container {
+  display: flex;
+  padding: 1.5rem 0;
+  align-items: center;
+}
+
+.old-price {
+  padding: 1rem;
+  font-size: 1rem;
+  color: hsl(228, 12%, 48%);
+  font-family: "Montserrat", sans-serif;
+}
+
+.new-price {
+  color: hsl(158, 36%, 37%);
+  font-size: 2.3rem;
+  font-family: "Fraunces", serif;
 }
 
 button {
   background-color: hsl(158, 36%, 37%);
+  border-radius: 0.5rem;
   color: hsl(0, 0%, 100%);
   display: flex;
-  width: 150px;
-}
-
-#cart-txt{
-  color: hsl(0, 0%, 100%);
-}
-.container {
-  display: flex;
-  width: 600px;
-  margin: auto;
   align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 3.5rem;
+  border: none;
+}
+#top {
+  letter-spacing: 0.2rem;
 }
 
-.discount {
-  color: hsl(158, 36%, 37%);
-}
-
-h1 {
-  font-family: "Fraunces", serif;
-}
-
-html{
-  background-color: hsl(30, 38%, 92%);
-}
-
-#icon-cart {
-  height: 16px;
-  width: 16px;
-}
-
-main {
-  height: 100vh;
-  display: flex;
-}
-
-p {
-  font-size: 14px;
-  font-family: "Montserrat", sans-serif;
-  color: hsl(228, 12%, 48%);
-}
-
-.img-perfume {
-  width: 300px;
-}
-
-.prices{
-  display: flex;
-}
-
-.wrapper{
+.wrapper {
   background-color: hsl(0, 0%, 100%);
-  display: grid;
-  height: 450px;
+  padding: 2rem;
 }
 
 .attribution {
-  font-size: 11px;
   text-align: center;
+  font-size: 0.7rem;
   color: hsl(228, 45%, 44%);
+}
+
+a {
+  padding-left: 2px;
+}
+
+@media screen and (max-width: 375px) {
+  .container {
+    max-width: 20rem;
+    display: block;
+  }
+
 }
