--- a/style.css
+++ b/style.css
@@ -78,27 +78,25 @@ body {
   font-family: "Fraunces", serif;
 }
 
-button {
+.btn {
   background-color: hsl(158, 36%, 37%);
   border-radius: 0.5rem;
   color: hsl(0, 0%, 100%);
+  font-family: "Fraunces", serif;
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 3rem;
   border: none;
+  gap: .5rem;
 }
 
-button:hover {
+.btn:hover {
   background-color: hsl(172, 25%, 22%);
   cursor: pointer;
 }
 
-#cart-txt {
-  color: hsl(0, 0%, 100%);
-  padding: 0.5rem;
-}
 
 .attribution {
   padding-top: 2rem;
