--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap");
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -17,16 +15,15 @@ body {
 
 .container {
   display: flex;
-  max-width: 42rem;
+  max-width: 38.2rem;
   border-radius: .5rem;
   overflow: hidden;
   font-family: "Montserrat", sans-serif;
-
 }
 
 .img-container {
   width: 50%;
-  min-width: 17rem;
+  min-width: 15rem;
 }
 
 .product-img {
@@ -37,9 +34,9 @@ body {
 
 .wrapper {
   background-color: hsl(0, 0%, 100%);
-  padding: 2.5rem;
+  padding: 2rem;
   width: 50%;
-  min-width: 17rem;
+  min-width: 15rem;
 }
 
 .top {
@@ -55,7 +52,8 @@ body {
 }
 
 .description {
-  /* font-size: 0.95rem; */
+  
+  font-size: 0.9rem;
   color: hsl(228, 12%, 48%);
   line-height: 1.5rem;
 }
@@ -67,8 +65,9 @@ body {
 }
 
 .old-price {
+  text-decoration: line-through;
   padding: 1rem;
-  font-size: 1rem;
+  font-size: 0.85rem;
   color: hsl(228, 12%, 48%);
 }
 
@@ -82,7 +81,6 @@ body {
   background-color: hsl(158, 36%, 37%);
   border-radius: 0.5rem;
   color: hsl(0, 0%, 100%);
-  font-family: "Fraunces", serif;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -90,6 +88,8 @@ body {
   height: 3rem;
   border: none;
   gap: .5rem;
+  font-weight: 700;
+  font-size: 1rem;
 }
 
 .btn:hover {
