--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+:root {
+  --gray: hsl(228, 12%, 48%);
+  --green: hsl(158, 36%, 37%);
+  --dark-green: hsl(158, 36%, 25%);
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -16,7 +22,7 @@ body {
 .container {
   display: flex;
   max-width: 38.2rem;
-  border-radius: .7rem;
+  border-radius: 11px;
   overflow: hidden;
   font-family: "Montserrat", sans-serif;
 }
@@ -30,6 +36,7 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  display: block;
 }
 
 .wrapper {
@@ -40,9 +47,9 @@ body {
 }
 
 .top {
-  font-size: .85rem;
-  letter-spacing: .3rem;
-  color: hsl(228, 12%, 48%);
+  font-size: 0.85rem;
+  letter-spacing: 0.3rem;
+  color: var(--gray);
 }
 
 .name {
@@ -52,9 +59,8 @@ body {
 }
 
 .description {
-  
   font-size: 0.9rem;
-  color: hsl(228, 12%, 48%);
+  color: var(--gray);
   line-height: 1.5rem;
 }
 
@@ -68,35 +74,34 @@ body {
   text-decoration: line-through;
   padding: 1rem;
   font-size: 0.85rem;
-  color: hsl(228, 12%, 48%);
+  color: var(--gray);
 }
 
 .new-price {
-  color: hsl(158, 36%, 37%);
+  color: var(--green);
   font-size: 2.15rem;
   font-family: "Fraunces", serif;
 }
 
 .btn {
-  background-color: hsl(158, 36%, 37%);
+  align-items: center;
+  background-color: var(--green);
   border-radius: 0.5rem;
+  border: none;
   color: hsl(0, 0%, 100%);
   display: flex;
-  align-items: center;
+  font-size: 1rem;
+  font-weight: 700;
+  gap: 0.5rem;
+  height: 3rem;
   justify-content: center;
   width: 100%;
-  height: 3rem;
-  border: none;
-  gap: .5rem;
-  font-weight: 700;
-  font-size: 1rem;
 }
 
 .btn:hover {
-  background-color: hsl(172, 25%, 22%);
+  background-color: var(--dark-green);
   cursor: pointer;
 }
-
 
 .attribution {
   padding-top: 2rem;
@@ -106,13 +111,13 @@ body {
   gap: 1px;
 }
 
-
 @media only screen and (max-width: 540px) {
   .container {
-    display: grid;
+    display: block;
     max-width: 25rem;
     margin: 1rem;
   }
+
   .img-container {
     width: 100%;
   }
@@ -121,26 +126,22 @@ body {
     content: url("./images/image-product-mobile.jpg");
   }
 
-
   .wrapper {
     width: 100%;
     padding: 1rem 1.5rem;
   }
 
-
-  .price-container{
+  .price-container {
     padding-bottom: 1rem;
   }
 
-  .top{
-font-size: .75rem;
+  .top {
+    font-size: 0.75rem;
   }
 
-
-  .name{
+  .name {
     padding: 1rem 0;
     font-size: 2rem;
     line-height: 2.2rem;
   }
-
 }
